# aoc

.github/workflows/: ci.yml
2024/python/: pyproject.toml
2024/python/02/: main.py
2024/python/03/: main.py
2024/python/04/: main.py
2024/python/app/: __init__.py  main.py
2024/python/app/03/: main.py
2024/python/app/04/: main.py
2024/python/app/day_01/: main.py  test.py
2024/python/app/day_02/: main.py  test.py
2024/python/app/helpers/: core.py
python/: pyproject.toml
python/src/: main.py
python/src/helpers/: core.py  executor.py  input.py
python/src/year_2024/: day_01.py  day_02.py  day_03.py  day_04.py
python/src/year_2024/day_01/: main.py
python/src/year_2024/day_02/: main.py
python/src/year_2024/day_03/: main.py
python/src/year_2024/day_04/: main.py
python/test/: conftest.py
python/test/2024/: test_2024.py
