[project]
name = "aoc_2024"
version = "0.4.0"
authors = [
    { name = "Alec Blom", email = "alec.blom@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" },
    { include = "test" },
]

[project.scripts]
execute_day = 'src.main:cli'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"