[project]
name = "aoc_2024"
version = "0.4.0"
authors = [
    { name = "Alec Blom", email = "alec.blom@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [
    { include = "app" }
]

[project.scripts]
run_day = 'app.main:cli'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"